@@ -387,7 +387,7 @@ dd { padding-bottom: 15px }
 	    </td>
       	<td>
 	  		<span>With option groups (disabled)</span><br>
-	        <select id="s6" class="s6" multiple="multiple">
+	        <select id="s6a" class="s6" multiple="multiple">
 				<optgroup label="Letters">
 					<option>A</option>
 					<option>B</option>
