@@ -3,7 +3,9 @@
 - if firstItemChecksAll is true and all items EXCEPT the first are checked, then autocheck the first (#62)
 - treat maxDropHeight as a 'max', not as 'fixed' (#77)
 - include simple vertical alignment css to try to address field positioning (#110)
-- account for tab out of open dropdown control, and various other key issues (#84)
+- various key issues (#84)
+  NOTE my approach for handling tabout via blur processing fails in IE7+ and Chrome due to loss of
+  	   focus when user clicks in scrollbar.  blur processing has been disabled for now.
 - assign ids to the generated elements for access by other jQuery processing, and keep the various ids
   unique (#97, #107, #111)
 - copy the tabindex of the underlying select if provided (#100)
